--- a/src/app/components/index.css
+++ b/src/app/components/index.css
@@ -11,13 +11,13 @@
   --black: #181717;
 }
 
-body {
+/* body {
   height: 100vh;
   display: grid;
   place-items: center;
 
   background-color: var(--white);
-}
+} */
 
 .containerX {
   width: 100%;
